--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "homepage": "https://github.com/namgk/node-red-contrib-dnr#readme",
   "dependencies": {
-    "dnr-daemon": "^2.0.3",
+    "dnr-daemon": "^2.0.5",
+    "dnr-interface": "^1.0.0",
     "mqtt": "^2.2.1",
     "ws": "^1.1.1"
   },
