--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-dnr",
-  "version": "2.2.3",
+  "version": "2.2.4",
   "description": "special node used in distributed node red",
   "main": "index.js",
   "scripts": {
@@ -22,7 +22,7 @@
   },
   "homepage": "https://github.com/namgk/node-red-contrib-dnr#readme",
   "dependencies": {
-    "dnr-daemon": "^2.0.7",
+    "dnr-daemon": "2.1.3",
     "dnr-interface": "^1.0.0",
     "mqtt": "^2.2.1",
     "ws": "^1.1.1"
