--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "node-red-contrib-dnr",
-  "version": "2.3.7",
+  "version": "2.3.8",
   "description": "special node used in distributed node red",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha --reporter spec"
   },
   "repository": {
     "type": "git",
@@ -32,5 +32,9 @@
       "dnr": "dnr/dist-wire.js",
       "dnr-daemon": "dnr/daemon.js"
     }
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0"
   }
 }
