--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   "homepage": "https://github.com/namgk/node-red-contrib-dnr#readme",
   "dependencies": {
     "dnr-daemon": "2.1.3",
-    "dnr-interface": "^1.0.0",
-    "mqtt": "^2.2.1",
+    "dnr-interface": "^1.2.0",
+    "mqtt": "2.9.0",
     "ws": "^1.1.1"
   },
   "node-red": {
