--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-dnr",
-  "version": "3.6.21",
+  "version": "3.6.22",
   "description": "special node used in distributed node red",
   "main": "index.js",
   "scripts": {
@@ -24,6 +24,7 @@
   "dependencies": {
     "dnr-daemon": "2.1.3",
     "dnr-interface": "^1.3.0",
+    "flatted": "^0.2.3",
     "mqtt": "2.9.0",
     "ws": "1.1.5"
   },
