--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-dnr",
-  "version": "3.6.22",
+  "version": "4.1.0",
   "description": "special node used in distributed node red",
   "main": "index.js",
   "scripts": {
@@ -22,8 +22,8 @@
   },
   "homepage": "https://github.com/namgk/node-red-contrib-dnr#readme",
   "dependencies": {
-    "dnr-daemon": "2.1.3",
-    "dnr-interface": "^1.3.0",
+    "dnr-daemon": "^2.2.3",
+    "dnr-interface": "^2.2.0",
     "flatted": "^0.2.3",
     "mqtt": "2.9.0",
     "ws": "1.1.5"
